--- a/blog/package.json
+++ b/blog/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@auth0/angular-jwt": "^2.0.0",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "angularfire-lite": "^5.2.0",
     "angularfire2": "^5.0.0-rc.10",
